fixed overlapping map view

--- a/css/style.scss
+++ b/css/style.scss
@@ -1075,7 +1075,7 @@
 /* Header */
 
 	#skel-layers-wrapper {
-		padding-top: 3em;
+		padding-top: 3.25em;
 	}
 
 	body.landing {
